force-app/main/default/objects/Log__c/fields/Is_Error__c.field-meta.xml
<CustomField>
    <fullName>Is_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field allow user to easily identify if this log issue is related to an error or a success. Most usefully on reports and fields.</description>
    <label>Is Error</label>
    <type>Checkbox</type>
</CustomField>