force-app/main/default/objects/Log__c/fields/Parent_Info__c.field-meta.xml
<CustomField>
    <fullName>Parent_Info__c</fullName>
    <description>This field allow users to identify the parent record associated with this log, if that parent exists.</description>
    <label>Parent Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>