force-app/main/default/objects/Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Object_Type__c</columns>
    <columns>Action__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Is_Error__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Process__c</columns>
    <columns>Parent_Info__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>