force-app/main/default/objects/Log__c/listViews/Success_Last_24h.listView-meta.xml
<ListView>
    <fullName>Success_Last_24h</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Object_Type__c</columns>
    <columns>Parent_Info__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Process__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Success Last 24h</label>
</ListView>