force-app/main/default/objects/Log__c/listViews/Today_s_errors.listView-meta.xml
<ListView>
    <fullName>Today_s_errors</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <columns>Object_Type__c</columns>
    <columns>Parent_Info__c</columns>
    <columns>Process__c</columns>
    <columns>Is_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>This weeks&apos; errors</label>
</ListView>